--- a/roles/precondition/tasks/processes.yaml
+++ b/roles/precondition/tasks/processes.yaml
@@ -2,7 +2,7 @@
   ansible.builtin.pids:
     name: '{{ item }}'
   register: proc
-  loop: '{{ processes }}'
+  loop: '{{ processes[game] }}'
 
 - name: Gather pids
   ansible.builtin.set_fact:
