change: add a prefix for vars with role name

--- a/roles/precondition/tasks/dependencies.yaml
+++ b/roles/precondition/tasks/dependencies.yaml
@@ -3,14 +3,14 @@
 #     psutil: "python{{ 3 if ansible_python.version.major == 3 else '' }}-psutil"
 
 - name: Install modules
-  when: dependencies[game]
+  when: precondition_dependencies[game]
   block:
     - ansible.builtin.apt: # noqa: name[missing]
         name: '{{ item }}'
-      loop: '{{ dependencies[game] }}'
+      loop: '{{ precondition_dependencies[game] }}'
       when: ansible_distribution == "Ubuntu"
 
     - ansible.builtin.yum: # noqa: name[missing]
         name: '{{ item }}'
-      loop: '{{ dependencies[game] }}'
+      loop: '{{ precondition_dependencies[game] }}'
       when: ansible_distribution == "CentOS"
