--- a/roles/initialization/handlers/main.yml
+++ b/roles/initialization/handlers/main.yml
@@ -1,2 +1,6 @@
 ---
 # handlers file for initialization
+- name: Restart sshd service
+  ansible.builtin.service:
+    name: ssh
+    state: restarted
