--- a/roles/initialization/tasks/main.yml
+++ b/roles/initialization/tasks/main.yml
@@ -1,4 +1,4 @@
 ---
 # tasks file for initialization
-- name: SSH service tasks
+- name: SSH service settings
   ansible.builtin.import_tasks: ssh.yaml
