--- a/roles/initialization/tasks/ssh.yaml
+++ b/roles/initialization/tasks/ssh.yaml
@@ -9,3 +9,5 @@
     dest: /etc/ssh/
     mode: '644'
   when: (not sshd_config.stat.exists) or overwrite.sshd_config
+  notify:
+    - Restart sshd service
