change: add user task

--- a/roles/initialization/tasks/main.yml
+++ b/roles/initialization/tasks/main.yml
@@ -5,3 +5,6 @@
     
 - name: Startup script settings
   ansible.builtin.import_tasks: startup.yaml
+
+- name: User settings
+  ansible.builtin.import_tasks: user.yaml
