change: add cron task

--- a/roles/initialization/tasks/main.yml
+++ b/roles/initialization/tasks/main.yml
@@ -11,3 +11,6 @@
 
 - name: Package management
   ansible.builtin.import_tasks: package.yaml
+    
+- name: Cron settings
+  ansible.builtin.import_tasks: cron.yaml
