--- a/roles/initialization/defaults/main.yml
+++ b/roles/initialization/defaults/main.yml
@@ -2,3 +2,7 @@
 # defaults file for initialization
 overwrite:
   sshd_config: false
+
+cron_path:
+  centos: /var/spool/cron/
+  ubuntu: /var/spool/cron/crontabs/
