--- a/roles/initialization/tasks/configuration.yaml
+++ b/roles/initialization/tasks/configuration.yaml
@@ -44,3 +44,9 @@
     state: absent
     path: "{{ item }}"
   loop: "{{ cron.files | json_query('[].path') | flatten }}"
+
+- name: Reset hosts file
+  ansible.builtin.copy:
+    src: hosts
+    dest: /etc/
+    mode: '644'
