--- a/roles/initialization/tasks/package.yaml
+++ b/roles/initialization/tasks/package.yaml
@@ -1,5 +1,17 @@
 - name: Remove packages
   ansible.builtin.package:
-    name: '{{ initialization_package.remove.name }}'
+    name: '{{ initialization_package.remove }}'
     state: absent
-  when: initialization_package.remove.name is defined
+  when: initialization_package.remove is defined
+
+- name: Install packages
+  ansible.builtin.package:
+    name: '{{ initialization_package.install }}'
+    state: absent
+  register: install
+  when: initialization_package.install is defined
+  until: install is succeeded
+  retries: 3
+  delay: 3
+  
+
