change: present to insert to more accurate name

--- a/roles/initialization/tasks/startup.yaml
+++ b/roles/initialization/tasks/startup.yaml
@@ -19,7 +19,7 @@
     path: '{{ initialization_startup.path }}'
     insertafter: '{{ line.after | default("EOF") }}'
     mode: "{{ '755' if initialization_startup.executable else '644' }}"
-  loop: '{{ initialization_startup.present }}'
+  loop: '{{ initialization_startup.insert }}'
   when: startup.stat.exists or initialization_startup.create
   loop_control:
     loop_var: line
