--- a/roles/initialization/vars/main.yml
+++ b/roles/initialization/vars/main.yml
@@ -14,7 +14,7 @@ initialization_startup:
     - elves-agent
     - zabbix
     - mount
-  present:
+  insert:
     - after: '#!'
       content: /sbin/hwclock --systohc
 
